# OpenMIMO

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  settings.json  todo.md
OpenMIMOPlot/: AppContainer.cpp  AppContainer.hpp  GLSafeInclude.hpp  entry.cpp
OpenMIMOPlot/Core/: Application.cpp  Application.hpp  ApplicationStarter.cpp  ApplicationStarter.hpp  GraphicsInjector.cpp  GraphicsInjector.hpp  ImGUILayer.cpp  ImGUILayer.hpp  ImPlotLayer.cpp  ImPlotLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
OpenMIMOPlot/Events/: ApplicationEvent.cpp  ApplicationEvent.hpp  Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp
OpenMIMOPlot/ImplementationGraphicsAPI/Graphics/D3D11/: D3D11Context.cpp  D3D11Context.hpp
OpenMIMOPlot/ImplementationGraphicsAPI/Graphics/GL4/: GL4Context.cpp  GL4Context.hpp
OpenMIMOPlot/ImplementationGraphicsAPI/ImGUI/GLFWGL4/: GLFWGL4ImGUILayer.cpp  GLFWGL4ImGUILayer.hpp
OpenMIMOPlot/ImplementationGraphicsAPI/ImGUI/WIN32D3D11/: WIN32D3D11ImGUILayer.cpp  WIN32D3D11ImGUILayer.hpp
OpenMIMOPlot/ImplementationGraphicsAPI/Window/GLFW/: GLFWController.cpp  GLFWController.hpp
OpenMIMOPlot/InterfaceGraphicsAPI/: GraphicsContext.cpp  GraphicsContext.hpp  WindowController.cpp  WindowController.hpp
OpenMIMOPlot/PlotLayers/: BodeLayer.cpp  BodeLayer.hpp  RootLocusLayer.cpp  RootLocusLayer.hpp  TestLayer.cpp  TestLayer.hpp
OpenMIMOPlot/Utils/: Clock.cpp  Clock.hpp  Console.cpp  Console.hpp  FileHandler.cpp  FileHandler.hpp  PointCloud.hpp
Samples/Bode/: CMakeLists.txt  bode.cpp
Samples/RootLocus/: CMakeLists.txt  rlocus.cpp
cmake/: CodeCoverage.cmake  OpenMIMOExamples.cmake  OpenMIMOPlot.cmake  OpenMIMOTest.cmake  imgui.cmake  imgui_backend.cmake  implot.cmake
examples/: CMakeLists.txt  hello.cpp  ss_enter.cpp  tf_enter.cpp
include/OpenMIMO/: BodeContainer.hpp  BodeContainer.inl  DynamicSystem.hpp  DynamicSystem.inl  DynamicSystemExceptions.hpp  Polynomial.hpp  Polynomial.inl  RootLocusContainer.hpp  RootLocusContainer.inl  Test.hpp  TransferFunction.hpp  TransferFunction.inl
include/OpenMIMO/utils/: ComplexSortClassifier.hpp  ComplexSortClassifier.inl  Sort.hpp  Sort.inl
tests/: BodeContainer.cpp  CMakeLists.txt  ComplexClassifiers.cpp  DynamicSystem.cpp  DynamicSystemExceptionsTests.cpp  DynamicSystemTests.cpp  Polynomial.cpp  RootLocusContainer.cpp  Sort.cpp  TransferFunction.cpp
(+2 files in other folders)
